--- a/index.html
+++ b/index.html
@@ -19,17 +19,23 @@
 
     <main>
         <section>
-            <h3>Choose your trip</h3>
-            <p>
-                We choose hotels which offer a great location, a high standard of comfort and quality, and a solid value
-                to our guests. These inns offer a superbly satisfying mix of a welcoming atmosphere, traditional
-                cuisine, and authentic charm. They are typically small, independently-owned properties which reflect the
-                character and hospitality of the surrounding alpine community. We know the owners personally, have a
-                longstanding
-                relationship with them, and we find they bend over backwards to provide our guests with an exceptional
-                experience
-            </p>
+            <section>
+                <h3>Choose your trip</h3>
+                <p>
+                    We choose hotels which offer a great location, a high standard of comfort and quality, and a solid
+                    value
+                    to our guests. These inns offer a superbly satisfying mix of a welcoming atmosphere, traditional
+                    cuisine, and authentic charm. They are typically small, independently-owned properties which reflect
+                    the
+                    character and hospitality of the surrounding alpine community. We know the owners personally, have a
+                    longstanding
+                    relationship with them, and we find they bend over backwards to provide our guests with an
+                    exceptional
+                    experience
+                </p>
+            </section>
 
+            <!-- 1. Bildraster -->
             <div>
                 <img src="https://images.unsplash.com/photo-1473170577235-e07d5ee8e382?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
                     alt="Wanderer in den Alpen">
@@ -37,6 +43,9 @@
                     alt="Schneebedeckte Alpen">
                 <img src="https://images.unsplash.com/photo-1497088669596-a940e3ab0d78?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
                     alt="Ein See in den Alpen">
+            </div>
+            <!-- 2. Bildraster -->
+            <div>
                 <img src="https://images.unsplash.com/photo-1472535139094-32c9c4f63f97?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
                     alt="Alpen">
                 <img src="https://images.unsplash.com/photo-1466873767530-f11ce2656cff?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"
